--- a/elastic/logstash/output.conf
+++ b/elastic/logstash/output.conf
@@ -1,11 +1,11 @@
 output {
-  elasticsearch {
-    hosts => ["https://192.168.100.15:9200"]
+    elasticsearch {
+    hosts => "elastics-master01:9200"
     manage_template => false
     index => "%{[@metadata][beat]}-%{[@metadata][version]}-%{+YYYY.MM.dd}"
     ssl => true
-    user => "elastic"
-    password => "admin.1"
+    user => "${USER}"
+    password => "${ELS_PWD}"
     cacert => '/etc/logstash/certs/http_ca.crt'
-  }
+    }
 }
