--- a/elastic/logstash/filter.conf
+++ b/elastic/logstash/filter.conf
@@ -12,6 +12,7 @@ filter {
              remove_tag => [ "_grokparsefailure" ]
              match => { "message" => "%{SYSLOGTIMESTAMP:timestamp}\s+%{IPORHOST:dst_host}\s+%{WORD:syslog_program}\[\d+\]:\s+(?<status>\w+\s+password)\s+for\s+invalid\s+user\s+%{USER:auth_user}\s+from\s+%{SYSLOGHOST:src_host}.*" }
              add_tag => [ "ssh_brute_force_attack", "filter_sshd","correlation" ]
+             add_field => { "activity" => "SSH Logins" }
              add_field => { "EventDesc" => "5710 SSHD Attempt to login using a non-existent user" }
              add_field => { "event_id" => "5710" }
           }
