--- a/elastic/logstash/filter.conf
+++ b/elastic/logstash/filter.conf
@@ -4,17 +4,17 @@ filter {
      if [fileset][name] == "auth" {
         grok {
            match => { "message" => "%{SYSLOGTIMESTAMP:timestamp}\s+%{IPORHOST:dst_host}\s+%{WORD:syslog_program}\[\d+\]:\s+(?<status>\w+\s+password)\s+for\s+%{USER:auth_user}\s+from\s+%{SYSLOGHOST:src_host}.*" }
-           add_field => { "activity" => "SSH Logins" }
            add_tag => "linux_auth"
+           add_field => { "activity" => "SSH Logins" }
         }
         if "_grokparsefailure" in [tags] {
           grok {
              remove_tag => [ "_grokparsefailure" ]
              match => { "message" => "%{SYSLOGTIMESTAMP:timestamp}\s+%{IPORHOST:dst_host}\s+%{WORD:syslog_program}\[\d+\]:\s+(?<status>\w+\s+password)\s+for\s+invalid\s+user\s+%{USER:auth_user}\s+from\s+%{SYSLOGHOST:src_host}.*" }
              add_tag => [ "ssh_brute_force_attack", "filter_sshd","correlation" ]
-             add_field => { "activity" => "SSH Logins" }
              add_field => { "EventDesc" => "5710 SSHD Attempt to login using a non-existent user" }
              add_field => { "event_id" => "5710" }
+             add_field => { "activity" => "SSH Logins" }
           }
           if "_grokparsefailure" in [tags] { drop {} }
         }
@@ -25,8 +25,9 @@ filter {
   else if [event][module] == "apache" {
      grok {
        match => { "message" => "%{COMBINEDAPACHELOG}" }
-       add_tag => "apache2-server"
-       add_field => { "logtype" => "apache-access-Web-Jaume" }
+       add_tag => "apache2-server-Jaume"
+       add_tag => "apache2-server-access"
+       add_field => { "logtype" => "Web-Jaume" }
      }
      if "_grokparsefailure" in [tags] { drop {} }
      date {
@@ -37,8 +38,9 @@ filter {
   else if [event][module] == "nginx" {
      grok {
        match => { "message" => "%{COMBINEDAPACHELOG}" }
-       add_tag => "nginx-server"
-       add_field => { "logtype" => "nginx-access-Web-Jaume" }
+       add_tag => "nginx-server-Jaume"
+       add_tag => "nginx-server-access"
+       add_field => { "logtype" => "Web-Jaume" }
      }
      if "_grokparsefailure" in [tags] { drop {} }
      date {
